--- a/themes/kangnam/ReadFile/chat-luong.html
+++ b/themes/kangnam/ReadFile/chat-luong.html
@@ -12,7 +12,7 @@
         var config = {
             imageResourcesPath: './images/', // duong dan toi folder image
             workerSrc: './js/pdf.worker.js', // duong dan toi toi file pdf.worker.js
-            pdfFile: data // duong dan toi file pdf
+            pdfFile: report // duong dan toi file pdf
         };
     </script>
 
