--- a/themes/kangnam/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
+++ b/themes/kangnam/huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html
@@ -63,9 +63,18 @@
                             </li>
                             <li class="menuSub">
                                 <a href="huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html" class="header_20_0_0__box__item arr">Hướng dẫn chăm sóc</a>
+
                             </li>
-                            <li class="menuSub">
-                                <a href="ReadFile/bang-gia.html" class="header_20_0_0__box__item arr" target="_blank">Bảng giá dịch vụ</a>
+                            <li class="menuSub menuSubDown">
+
+                                <a href="#" class="header_20_0_0__box__item arr">Danh mục</a>
+                                <div class="header_20_0_0__menuSubDown">
+                                    <a href="ReadFile/bang-gia.html" class="header_20_0_0__dropDownItem" target="_blank">Bảng giá dịch vụ</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-1.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 1</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-2.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 2</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-3.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 3</a>
+
+                                </div>
                             </li>
                             <li class=" menuSub ">
                                 <a href="lien-he.html " class="header_20_0_0__box__item arr ">Liên hệ</a>
@@ -79,129 +88,15 @@
                     </div>
                     <div class="header_20_0_0__task">
                         <span href="#" class="header_20_0_0__boxSearch ">
-                            19006466 
+                            0777272615 
                         </span>
                     </div>
-                    <div class="header_20_0_0__box-bg " id="bg-menu ">
-                    </div>
+
                 </div>
 
             </div>
         </div>
-        <div class="header_20_0_0__box-all " id="boxall-menu ">
-            <div class="container ">
-                <div class="row ">
-                    <div class="col-md-3 ">
-                        <h4>Mắt</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Mũi</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Khuôn mặt</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Body</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Trẻ hóa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Da liễu</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Spa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Nha khoa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 ">
-                        <h4>Giới thiệu</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js "></script>
 
@@ -276,55 +171,54 @@
                     <div>
                     </div>
                 </div>
+                <img src='images/pic-1-pc.jpg' style='width:100%' />
             </div>
         </div>
     </section>
     <link rel="stylesheet " type="text/css " href="Footer/footer_5_0_0/css/footer_5_0_0.css " />
-    <section class="footer_5_0_0 ">
-        <div class="footer_5_0_0__container container ">
-            <div class="footer_5_0_0Box ">
-                <div class="foodItem footer_5_0_0Item-brand ">
-                    <div class="foodItem-brand__logo ">
-                        <a href="/ "><img src="images/logo.png " alt="Bệnh viện thẩm mỹ Kang Nam Logo "></a>
+    <section class="footer_5_0_0">
+        <div class="footer_5_0_0__container container">
+            <div class="footer_5_0_0Box">
+                <div class="foodItem footer_5_0_0Item-brand">
+                    <div class="foodItem-brand__logo">
+                        <a href="/"><img src="images/logo.png" alt="Bệnh viện thẩm mỹ Kang Nam Logo"></a>
                     </div>
                 </div>
 
-                <div class="foodItem footer_5_0_0Item-city ">
-                    <div class="footer_5_0_0Item-city__name ">tp. hồ chí minh</div>
-                    <div class="footer_5_0_0Item-city__contact ">
-                        <a class="footer_5_0_0Item-city__contact-add " rel="nofollow " target="_blank " href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi "><span><img
-                                    src="images/icon-map.png "></span>666 Cách mạng tháng 8, P5, Q. Tân Bình, Tp.HCM</a>
-                        <div class="footer_5_0_0Item__contact-hot ">
-                            <span><img src="images/icon-call.png "></span>
-                            <a class="footer_5_0_0Item-city__contact-hotline " rel="nofollow " target="_blank " href="tel:024.73.00.64.66 ">024.73.00.64.66</a>
-                            <a class="footer_5_0_0Item-city__contact-hotline " rel="nofollow " target="_blank " href="tel:0948.44.99.88 "> - 0948.44.99.88</a>
+                <div class="foodItem footer_5_0_0Item-city">
+                    <div class="footer_5_0_0Item-city__name">tp. hồ chí minh</div>
+                    <div class="footer_5_0_0Item-city__contact">
+                        <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"><span><img
+                                    src="images/icon-map.png"></span>Bệnh Viện Thẩm Mỹ Kangnam - 84A Bà Huyện Thanh Quan, Quận 3, Hồ Chí Minh</a>
+                        <div class="footer_5_0_0Item__contact-hot">
+                            <span><img src="images/icon-call.png"></span>
+                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:024.73.00.64.66">28 7301 5666</a>
+                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:0948.44.99.88"> - 0777272615</a>
                         </div>
                     </div>
                 </div>
-                <div class="footer_5_0_0Item-hot ">
-                    Hotline: 19006466
+                <div class="footer_5_0_0Item-hot">
+                    Hotline: 0777272615
                 </div>
             </div>
             <div class="footer_5_0_0Box footer_5_0_0Box2 ">
-                <div class="foodItem footer_5_0_0Item-brand ">
+                <div class="foodItem footer_5_0_0Item-brand">
 
                 </div>
-                <div class="foodItem footer_5_0_0Item-city2 ">
+                <div class="foodItem footer_5_0_0Item-city2">
                     <p>
-                        Bệnh viện thẩm mỹ Kangnam Sài Gòn<br> Giấy phép hoạt động kcb số 287/byt-gphđ do bộ y tế <br> cấp ngày 03/12/2020
+                        Bệnh viện thẩm mỹ Kangnam<br> Giấy phép hoạt động: 181/BYT-GPHĐ Ngày cấp: 27/02/2019
                     </p>
-
                 </div>
 
             </div>
-            <div class="footer_5_0_0Item-gp ">
-
-
-
-                <p><img src="images/dcma.png "></p>
+            <div class="footer_5_0_0Item-gp">
+                <img src='images/bocongthuong.png' />
+                <img src="images/dcma.png">
             </div>
         </div>
     </section>
+
 
     <link rel="stylesheet" type="text/css" href="Popup/tool_info_1_2_1/css/tool_info_1_2_1.css" />
     <section class="tool_info_1_2_1">
@@ -334,13 +228,6 @@
                     <a class="bvkn_dkcall"> Gọi điện
                             <div class="icon">
                                 <img width="21" height="21" src="images/call.png" alt="Gọi điện">
-                            </div>
-                        </a>
-                </div>
-                <div class="tool_info_1_2_1__item">
-                    <a href="https://zalo.me/3078465991051061571" target="_blank"> Zalo
-                            <div class=" icon ">
-                                <img width="26 " height="25 " src="images/zalo.png " alt="Zalo ">
                             </div>
                         </a>
                 </div>
@@ -408,7 +295,7 @@
                                 <div class="popup_call_1_1_0_header-note">Nhập số điện thoại để được BVTM Kangnam gọi lại ngay !</div>
                             </div>
                             <div class="popup_call_1_1_0_headermb">
-                                <a href="tel:19006466" class="popup_call_1_1_0_headermb-call"><i class="popup_call_1_1_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
+                                <a href="tel:0777272615" class="popup_call_1_1_0_headermb-call"><i class="popup_call_1_1_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
                                 <div class="popup_call_1_1_0_header-note">- hoặc để lại số điện thoại của bạn - <br> để nhận cuộc gọi từ <br> BVTM Kangnam</div>
                             </div>
                         </div>
