--- a/themes/kangnam/index.html
+++ b/themes/kangnam/index.html
@@ -63,9 +63,18 @@
                             </li>
                             <li class="menuSub">
                                 <a href="huong-dan-cham-soc-va-che-do-an-uong-sau-phau-thuat-tham-my.html" class="header_20_0_0__box__item arr">Hướng dẫn chăm sóc</a>
+
                             </li>
-                            <li class="menuSub">
-                                <a href="ReadFile/bang-gia.html" class="header_20_0_0__box__item arr" target="_blank">Bảng giá dịch vụ</a>
+                            <li class="menuSub menuSubDown">
+
+                                <a href="#" class="header_20_0_0__box__item arr">Danh mục</a>
+                                <div class="header_20_0_0__menuSubDown">
+                                    <a href="ReadFile/bang-gia.html" class="header_20_0_0__dropDownItem" target="_blank">Bảng giá dịch vụ</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-1.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 1</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-2.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 2</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-3.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 3</a>
+
+                                </div>
                             </li>
                             <li class=" menuSub ">
                                 <a href="lien-he.html " class="header_20_0_0__box__item arr ">Liên hệ</a>
@@ -82,126 +91,12 @@
                             0777272615
                         </span>
                     </div>
-                    <div class="header_20_0_0__box-bg" id="bg-menu">
-                    </div>
+
                 </div>
 
             </div>
         </div>
-        <div class="header_20_0_0__box-all" id="boxall-menu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <h4>Mắt</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Mũi</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Khuôn mặt</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Body</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Trẻ hóa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Da liễu</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Spa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Nha khoa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Giới thiệu</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
 
@@ -525,7 +420,7 @@
 
     <link rel="stylesheet " type="text/css " href="Popup/popup_map_1_0_0/css/popup_map_1_0_0.css " />
     <script src="Popup/popup_map_1_0_0/js/popup_map_1_0_0.js "></script>
-    <div class="popup_map_1_0_0">
+    <div class="popup_map_1_0_0" style="">
         <div class="container">
             <div class="popup_map_1_0_0__bg" id="popup_map_1_0_0_overlay" style="display:none"></div>
             <div class="popup_map_1_0_0__form" id="popup_map_1_0_0_overlayClickform" style="display:none">
@@ -533,12 +428,18 @@
                     <article>
                         <div class="popup_map_1_0_0__content">
                             <div class="popup_map_1_0_0__item">
-
-                                <a href="https://www.google.com/maps/place/P,+666+C%C3%A1ch+M%E1%BA%A1ng+Th%C3%A1ng+T%C3%A1m,+ph%C6%B0%E1%BB%9Dng+11,+T%C3%A2n+B%C3%ACnh,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh+700000,+Vi%E1%BB%87t+Nam/@10.786674,106.6649636,17z/data=!4m5!3m4!1s0x31752ed20d82117b:0x92449d2cad0c9deb!8m2!3d10.7868163!4d106.6652104?hl=vi-VN"
-                                    target="_blank">
-                                    <img src="images/kangnam-hochiminh.jpg?ver=1" alt="">
-                                </a>
-
+                                <div class="popup_map_1_0_0__tt">
+                                    <img src="images/tt_hcm.png" alt="">
+                                </div>
+                                <div class="popup_map_1_0_0__ct">
+                                    <div class="popup_map_1_0_0__pic">
+                                        <img src="images/KN-hcm.jpg" alt="">
+                                    </div>
+                                    <a href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"
+                                        target="_blank">
+                                        <img src="images/hcm.png" alt="">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <a id="popup_map_1_0_0__close"></a>
@@ -547,6 +448,7 @@
             </div>
         </div>
     </div>
+
 
     <link rel="stylesheet " type="text/css " href="Popup/popup_call_1_1_0/css/popup_call_1_1_0.css " />
     <script src="Popup/popup_call_1_1_0/js/popup_call_1_1_0.js "></script>
@@ -563,7 +465,7 @@
                                 <div class="popup_call_1_1_0_header-note">Nhập số điện thoại để được BVTM Kangnam gọi lại ngay !</div>
                             </div>
                             <div class="popup_call_1_1_0_headermb">
-                                <a href="tel:19006466" class="popup_call_1_1_0_headermb-call"><i class="popup_call_1_1_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
+                                <a href="tel:0777272615" class="popup_call_1_1_0_headermb-call"><i class="popup_call_1_1_0_headermb-call-icon"></i> gọi ngay cho chúng tôi</a>
                                 <div class="popup_call_1_1_0_header-note">- hoặc để lại số điện thoại của bạn - <br> để nhận cuộc gọi từ <br> BVTM Kangnam</div>
                             </div>
                         </div>
