--- a/themes/kangnam/gioi-thieu.html
+++ b/themes/kangnam/gioi-thieu.html
@@ -220,12 +220,12 @@
                 <div class="foodItem footer_5_0_0Item-city">
                     <div class="footer_5_0_0Item-city__name">tp. hồ chí minh</div>
                     <div class="footer_5_0_0Item-city__contact">
-                        <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"><span><img
+                        <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/84A+B%C3%A0+Huy%E1%BB%87n+Thanh+Quan,+Ph%C6%B0%E1%BB%9Dng+9,+Qu%E1%BA%ADn+3,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.7819818,106.6821526,19z/data=!4m5!3m4!1s0x31752f28d5b50631:0x131d407646f655dd!8m2!3d10.7818157!4d106.6818749?hl=vi"><span><img
                                     src="images/icon-map.png"></span>Bệnh Viện Thẩm Mỹ Kangnam - 84A Bà Huyện Thanh Quan, Quận 3, Hồ Chí Minh</a>
                         <div class="footer_5_0_0Item__contact-hot">
                             <span><img src="images/icon-call.png"></span>
-                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:024.73.00.64.66">28 7301 5666</a>
-                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:0948.44.99.88"> - 0777272615</a>
+                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:2873015666">28 7301 5666</a>
+                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:0777272615"> - 0777272615</a>
                         </div>
                     </div>
                 </div>
@@ -250,8 +250,6 @@
             </div>
         </div>
     </section>
-
-
     <link rel="stylesheet" type="text/css" href="Popup/tool_info_1_2_1/css/tool_info_1_2_1.css" />
     <section class="tool_info_1_2_1">
         <div class="container">
@@ -263,7 +261,6 @@
                             </div>
                         </a>
                 </div>
-
                 <div class="tool_info_1_2_1__item ">
                     <a class="btnkn1km "> Báo giá
                             <div class="icon ">
@@ -284,7 +281,7 @@
 
     <link rel="stylesheet " type="text/css " href="Popup/popup_map_1_0_0/css/popup_map_1_0_0.css " />
     <script src="Popup/popup_map_1_0_0/js/popup_map_1_0_0.js "></script>
-    <div class="popup_map_1_0_0" style="">
+    <div class="popup_map_1_0_0">
         <div class="container">
             <div class="popup_map_1_0_0__bg" id="popup_map_1_0_0_overlay" style="display:none"></div>
             <div class="popup_map_1_0_0__form" id="popup_map_1_0_0_overlayClickform" style="display:none">
@@ -392,7 +389,6 @@
                                 </select>
                             </div>
                             <input type="hidden" style="display:none" id="iemail" name="iemail" type="textbox" placeholder="Email:">
-                            <!-- <textarea id="itext" type="hidden" name="itext" value="" placeholder="Dịch vụ quan tâm"></textarea> -->
                             <input type="hidden" id="gclid_field" name="gclid_field" value="">
                             <input type="hidden" id="code_campaign" name="code_campaign" value="583971142">
                             <input type="hidden" id="name_campaign" name="name_campaign" value="[Kangnam] Sale Kangnam">
