--- a/themes/kangnam/lien-he.html
+++ b/themes/kangnam/lien-he.html
@@ -218,7 +218,7 @@
     <section class="post_4_2_0">
         <div class="container">
             <div class="post_4_2_0__title">
-                <span class="post_4_2_0__title-up">Bệnh viện thẩm mĩ Kangnam Sài Gòn</span>
+                <span class="post_4_2_0__title-up">Bệnh viện thẩm mĩ Kangnam</span>
                 <span class="post_4_2_0__title-down">Thông tin liên hệ</span>
             </div>
             <div class="post_4_2_0__line"></div>
@@ -231,7 +231,7 @@
                         </span>
                     </div>
                     <div class="post_4_2_0__box-right">
-                        <span class="post_4_2_0__box-desc">666 Cách mạng tháng 8, P.5. Q. Tân Bình, Tp.HCM </span>
+                        <span class="post_4_2_0__box-desc">84A Bà Huyện Thanh Quan, Quận 3, Hồ Chí Minh</span>
                     </div>
                 </div>
 
@@ -241,10 +241,7 @@
                             <img src='images/phone.png'/>
                             <p>Hotline:</p>
                         </span>
-                        <span class="post_4_2_0__boxMid-title">
-                            <img src='images/phone.png'/>
-                            <p>Zalo/ Viber:</p>
-                        </span>
+
                         <span class="post_4_2_0__boxMid-title">
                             <img src='images/facebook.png'/>
                             <p>Facebook:</p>
@@ -256,7 +253,7 @@
                     </div>
                     <div class="post_4_2_0__boxMid-right">
                         <span class="post_4_2_0__box-desc" style="color:#ff6000">0777272615 </span>
-                        <span class="post_4_2_0__box-desc"> 0969999777</span>
+
                         <span class="post_4_2_0__box-desc">https://www.facebook.com/Thammykangnam </span>
                         <span class="post_4_2_0__box-desc">https://www.youtube.com/c/ThammyKangnam</span>
 
@@ -292,12 +289,12 @@
                 <div class="foodItem footer_5_0_0Item-city">
                     <div class="footer_5_0_0Item-city__name">tp. hồ chí minh</div>
                     <div class="footer_5_0_0Item-city__contact">
-                        <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/B%E1%BB%87nh+Vi%E1%BB%87n+Th%E1%BA%A9m+M%E1%BB%B9+Kangnam+H%C3%A0n+Qu%E1%BB%91c/@10.7817488,106.6797661,17z/data=!3m1!4b1!4m5!3m4!1s0x31752edf6f710189:0xb553f42d991d07dd!8m2!3d10.7817488!4d106.6819548?hl=vi"><span><img
+                        <a class="footer_5_0_0Item-city__contact-add" rel="nofollow" target="_blank" href="https://www.google.com/maps/place/84A+B%C3%A0+Huy%E1%BB%87n+Thanh+Quan,+Ph%C6%B0%E1%BB%9Dng+9,+Qu%E1%BA%ADn+3,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.7819818,106.6821526,19z/data=!4m5!3m4!1s0x31752f28d5b50631:0x131d407646f655dd!8m2!3d10.7818157!4d106.6818749?hl=vi"><span><img
                                     src="images/icon-map.png"></span>Bệnh Viện Thẩm Mỹ Kangnam - 84A Bà Huyện Thanh Quan, Quận 3, Hồ Chí Minh</a>
                         <div class="footer_5_0_0Item__contact-hot">
                             <span><img src="images/icon-call.png"></span>
-                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:024.73.00.64.66">28 7301 5666</a>
-                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:0948.44.99.88"> - 0777272615</a>
+                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:2873015666">28 7301 5666</a>
+                            <a class="footer_5_0_0Item-city__contact-hotline" rel="nofollow" target="_blank" href="tel:0777272615"> - 0777272615</a>
                         </div>
                     </div>
                 </div>
