--- a/themes/kangnam/lien-he.html
+++ b/themes/kangnam/lien-he.html
@@ -49,8 +49,8 @@
                 <div class="header_20_0_0__box">
                     <div class="header_20_0_0__box__section2">
                         <div class="header_20_0_0__boxLogo">
-                            <a href="/">
-                                <img width="135" src="images/logo.png" alt="">
+                            <a href="index.html">
+                                <img width="135px" src="images/logo.png" alt="">
                             </a>
                         </div>
                         <div class="iconMidd header_20_0_0__boxNav" id="icon-menu">☰</div>
@@ -66,151 +66,38 @@
 
                             </li>
                             <li class="menuSub menuSubDown">
-
                                 <a href="#" class="header_20_0_0__box__item arr">Danh mục</a>
                                 <div class="header_20_0_0__menuSubDown">
                                     <a href="ReadFile/bang-gia.html" class="header_20_0_0__dropDownItem" target="_blank">Bảng giá dịch vụ</a>
-                                    <a href="ReadFile/danh-muc-ky-thuat-1.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 1</a>
-                                    <a href="ReadFile/danh-muc-ky-thuat-2.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 2</a>
-                                    <a href="ReadFile/danh-muc-ky-thuat-3.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 3</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-1.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật <br>(Ban hành lần 1)</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-2.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 2 <br>(Ban hành lần 2)</a>
+                                    <a href="ReadFile/danh-muc-ky-thuat-3.html" class="header_20_0_0__dropDownItem" target="_blank">Danh mục kỹ thuật 3 <br>(Ban hành lần 3)</a>
 
                                 </div>
                             </li>
                             <li class=" menuSub ">
                                 <a href="lien-he.html " class="header_20_0_0__box__item arr ">Liên hệ</a>
                             </li>
-                            <li class="menuSub ">
-                                <a href="ReadFile/chat-luong.html " class="header_20_0_0__box__item arr " target="_blank ">Chất lượng</a>
+                            <li class="menuSub menuSubDown">
+                                <a href="#" class="header_20_0_0__box__item arr">Chất lượng</a>
+                                <div class="header_20_0_0__menuSubDown">
+                                    <a href="ReadFile/chat-luong.html" class="header_20_0_0__dropDownItem" target="_blank">Đánh giá chất lượng</a>
+                                    <a href="ReadFile/ke-hoach-phat-trien-nguon-nhan-luc.html" class="header_20_0_0__dropDownItem" target="_blank">Kế hoạch phát triển nguồn nhân lực</a>
+                                </div>
                             </li>
                         </ul>
-
-
                     </div>
                     <div class="header_20_0_0__task">
                         <span href="#" class="header_20_0_0__boxSearch ">
-                            0777272615 
+                            0777272615
                         </span>
                     </div>
-                    <div class="header_20_0_0__box-bg" id="bg-menu">
-                    </div>
+
                 </div>
 
             </div>
         </div>
-        <div class="header_20_0_0__box-all" id="boxall-menu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <h4>Mắt</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Mũi</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Khuôn mặt</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Body</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Trẻ hóa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Da liễu</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Spa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Nha khoa</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4>Giới thiệu</h4>
-                        <ul>
-                            <li><a href='' rel='nofollow'>- PT tạo mắt 2 mí</a></li>
-                            <li><a href='' rel='nofollow'>- PT thừa da mi mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT lấy bọng mỡ</a></li>
-                            <li><a href='' rel='nofollow'>- PT nâng cung mày</a></li>
-                            <li><a href='' rel='nofollow'>- PT treo cơ mi</a></li>
-                            <li><a href='' rel='nofollow'>- Ghép mỡ tự thân vùng mắt</a></li>
-                            <li><a href='' rel='nofollow'>- PT vùng quanh mắt</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </header>
     <script src="Header/header_20_0_0/js/header_20_0_0.js"></script>
 
@@ -475,7 +362,25 @@
     </div>
     <script src="media/js/jquery.js"></script>
     <script type="text/javascript" src="https://benhvienthammykangnam.vn/quangcao247/contact/template/js/js.js?t=112346"></script>
-
+    <script type="text/javascript">
+        function loadJsAsync(t, e) {
+            var n = document.createElement("script");
+            n.type = "text/javascript", n.src = t, n.addEventListener("load", function(t) {
+                e(null, t)
+            }, !1);
+            var a = document.getElementsByTagName("head")[0];
+            a.appendChild(n)
+        }
+        window.addEventListener("DOMContentLoaded", function() {
+            loadJsAsync("https://webchat.caresoft.vn:8090/js/CsChat.js?v=4.0", function() {
+                var t = {
+                    domain: "kangnam",
+                    domainId: 8989
+                };
+                embedCsChat(t)
+            })
+        }, !1);
+    </script>
     <script>
         function imgTheme(path, tag) {
             let x = document.querySelectorAll(tag);
