--- a/themes/kangnam/index.html
+++ b/themes/kangnam/index.html
@@ -310,7 +310,7 @@
         </div>
     </div>
 
-    <link rel="stylesheet" type="text/css" href="Home/doctor_10_0_0/css/doctor_10_0_0.css" />
+    <link rel="stylesheet" type="text/css" href="Home/doctor_10_0_0/css/doctor_10_0_0.css?ver=1" />
     <section class="doctor_10_0_0">
         <div class="container">
             <div class="doctor_10_0_0__box">
