--- a/pop_regpr_1_0_0/index.html
+++ b/pop_regpr_1_0_0/index.html
@@ -63,7 +63,7 @@
                         <div class="modal-close">×</div>
                         <div class="modal-title">
                             <img src="./images/logo.png" alt="">
-                            <div class="pop_callpr_1_0_0__des">
+                            <div class="pop_callpr_1_0_0__des1">
                                 <p>Gọi ngay để được tư vấn & đặt lịch hẹn!</p>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                         <div class="modal-header">
                             <div class="modal-title">
                                 <div class="pop_callpr_1_0_0__des">
-                                    <p>Hoặc để lại số điện thoại của bạn <br>
+                                    <p>Để lại số điện thoại của bạn <br>
                                         để nhận cuộc gọi từ Nha Khoa Paris</p>
                                 </div>
                             </div>
