update header paris

--- a/Header/header_pr_1_0_0/index.html
+++ b/Header/header_pr_1_0_0/index.html
@@ -13,46 +13,46 @@
 <body>
     <header>
         <div class="container">
-            <div class="siteHeader">
-                <div class="siteHeader__section">
-                    <div class="siteHeaderLogo">
+            <div class="header_pr_1_0_0">
+                <div class="header_pr_1_0_0__section">
+                    <div class="header_pr_1_0_0__Logo">
                         <a href="https://nhakhoaparis.vn/" target="_blank">
                             <img src="images/logo.png" alt="" />
                         </a>
                     </div>
-                    <div class="iconMid siteHeaderNav">
+                    <div class="iconMid header_pr_1_0_0__Nav">
                         <i class="icon-menu"></i>☰
                     </div>
-                    <a class="iconMid siteHeaderCall btnnkhotline iconn modal-btn" data-modal="modal-top">
+                    <a class="iconMid header_pr_1_0_0__Call modal-btn" data-modal="modal-top">
                         <i class="icon-phone-1">
                             <img src="images/icon-phone.png" />
                         </i>
                     </a>
                 </div>
-                <div class="siteHeader__section siteHeaderMain">
-                    <a href="https://nhakhoaparis.vn/" target="_blank" class="siteHeader__item-logosb"><img
+                <div class="header_pr_1_0_0__Main">
+                    <a href="https://nhakhoaparis.vn/" target="_blank" class="header_pr_1_0_0__item-logo__sb"><img
                             src="images/logo2.png" alt="" /></a>
                     <ul class="menu">
                         <li>
-                            <a href="#page1" class="siteHeader__item">Giới Thiệu </a>
+                            <a href="#page1" class="header_pr_1_0_0__item">Giới Thiệu </a>
                         </li>
                         <li>
-                            <a href="#page2" class="siteHeader__item">Ưu đãi</a>
+                            <a href="#page2" class="header_pr_1_0_0__item">Ưu đãi</a>
                         </li>
                         <li>
-                            <a href="#page7" class="siteHeader__item">Quy trình</a>
+                            <a href="#page7" class="header_pr_1_0_0__item">Quy trình</a>
                         </li>
                         <li>
-                            <a href="#page8" class="siteHeader__item">Khách hàng</a>
+                            <a href="#page8" class="header_pr_1_0_0__item">Khách hàng</a>
                         </li>
                         <li>
-                            <a href="#page5" class="siteHeader__item">Chuyên gia</a>
+                            <a href="#page5" class="header_pr_1_0_0__item">Chuyên gia</a>
                         </li>
                         <li>
-                            <a href="#page6" class="siteHeader__item">Công nghệ</a>
+                            <a href="#page6" class="header_pr_1_0_0__item">Công nghệ</a>
                         </li>
                     </ul>
-                    <a class="siteHeaderPhone btn btnnkhotline modal-btn" data-modal="modal-top">
+                    <a class="header_pr_1_0_0__Phone modal-btn" data-modal="modal-top">
                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 405.333 405.333"
                             style="enable-background: new 0 0 405.333 405.333" xml:space="preserve">
@@ -67,9 +67,9 @@
                             </g>
                         </svg> 1900.6900
                     </a>
-                    <a class="siteHeaderRegist modal-btn btn" data-modal="modal-pop">Nhận ưu đãi</a>
+                    <a class="header_pr_1_0_0__Regist modal-btn" data-modal="modal-pop">Nhận ưu đãi</a>
                 </div>
-                <div class="siteHeader-bg"></div>
+                <div class="header_pr_1_0_0-bg"></div>
             </div>
         </div>
     </header>
@@ -178,12 +178,12 @@
     <script src="js/lib-min.js"></script>
 
     <script>  //mob menu
-        addClass('.siteHeaderNav', '.siteHeaderMain', 'active');
-        addClass('.siteHeaderNav', '.siteHeader-bg', 'active');
-        removeClass('.siteHeader-bg', '.siteHeaderMain', 'active');
-        removeClass('.siteHeader-bg', '.siteHeader-bg', 'active');
-        removeClass('.siteHeader a', '.siteHeaderMain', 'active');
-        removeClass('.siteHeader a', '.siteHeader-bg', 'active');
+        addClass('.header_pr_1_0_0__Nav', '.header_pr_1_0_0__Main', 'active');
+        addClass('.header_pr_1_0_0__Nav', '.header_pr_1_0_0-bg', 'active');
+        removeClass('.header_pr_1_0_0-bg', '.header_pr_1_0_0__Main', 'active');
+        removeClass('.header_pr_1_0_0-bg', '.header_pr_1_0_0-bg', 'active');
+        removeClass('.header_pr_1_0_0 a', '.header_pr_1_0_0__Main', 'active');
+        removeClass('.header_pr_1_0_0 a', '.header_pr_1_0_0-bg', 'active');
     </script>
 </body>
 
