update footer paris

--- a/Header/header_pr_1_0_0/index.html
+++ b/Header/header_pr_1_0_0/index.html
@@ -186,5 +186,6 @@
         removeClass('.header_pr_1_0_0 a', '.header_pr_1_0_0-bg', 'active');
     </script>
 </body>
-
 </html>
+
+<!-- E:\SCI_Code_Backup\module\Header\header_pr_1_0_0 \ css by Cường 13/04/2022 -->
