update footer paris

--- a/Footer/footer_pr_1_0_0/index.html
+++ b/Footer/footer_pr_1_0_0/index.html
@@ -11,46 +11,46 @@
 </head>
 
 <body>
-    <section class="footer_1_0_0">
-        <div class="footer_1_0_0__refuse">
+    <section class="footer_pr_1_0_0">
+        <div class="footer_pr_1_0_0__refuse">
             <div class="container">Hiệu quả phụ thuộc vào cơ địa mỗi người (*)</div>
         </div>
         <div class="container">
-            <div class="footer_1_0_0__Logo">
+            <div class="footer_pr_1_0_0__logo">
                 <a href="#">
                     <img class="lazy" data-src="images/logo1.png?ver=2" alt="" />
                 </a>
             </div>
-            <div class="footer_1_0_0__infor">
-                <div class="footer_1_0_0__infor__item">
-                    <div class="footer_1_0_0__infor__contact">
-                        <div class="footer_1_0_0__infor__title">
+            <div class="footer_pr_1_0_0__infor">
+                <div class="footer_pr_1_0_0__item">
+                    <div class="footer_pr_1_0_0__contact">
+                        <div class="footer_pr_1_0_0__title">
                             <h3>hệ thống chuỗi nha khoa tiêu chuẩn pháp</h3>
                             <p><b>Bác sĩ tư vấn 24/7</b> 0943.776.699</p>
                         </div>
-                        <div class="footer_1_0_0__infor__Social">
+                        <div class="footer_pr_1_0_0__social">
                             <a class="boxtop__call-2" href="tel:19006900">
                                 <img class="lazy" data-src="images/boxtop-call.png" alt="" />1900.6900
                             </a>
                             <a href="https://www.facebook.com/NhaKhoaParis/" target="_blank" rel="nofollow"
-                                class="footer_1_0_0__infor__Social-facebook">
+                                class="footer_pr_1_0_0__social-facebook">
                                 <img class="lazy" data-src="images/ft-fb.png" alt="" />
                             </a>
                             <a href="https://www.youtube.com/channel/UCHMf1HRdqpBRqP6p-qZyGog" target="_blank"
-                                rel="nofollow" class="footer_1_0_0__infor__Social-youtube">
+                                rel="nofollow" class="footer_pr_1_0_0__social-youtube">
                                 <img class="lazy" data-src="images/ft-yt.png" alt="" />
                             </a>
                         </div>
                     </div>
-                    <div class="footer_1_0_0__infor__pic">
+                    <div class="footer_pr_1_0_0__pic">
                         <a href=" https://www.facebook.com/NhaKhoaParis/" target="_blank" rel="nofollow">
                             <img class="lazy" data-src="images/fb.png?ver=2" alt="" />
                         </a>
                     </div>
                 </div>
 
-                <div class="footer_1_0_0__infor__item">
-                    <div class="footer_1_0_0__infor__partner">
+                <div class="footer_pr_1_0_0__item">
+                    <div class="footer_pr_1_0_0__partner">
                         <ul>
                             <li class="fra">
                                 <img class="lazy" data-src="images/flag-france.png" alt="" />
@@ -64,7 +64,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer_1_0_0__infor__protect">
+                    <div class="footer_pr_1_0_0__protect">
                         <a href="https://www.dmca.com/Protection/Status.aspx?ID=b192a6ce-8f99-437e-8933-163c70a4523c">
                             <img class="lazy" data-src="images/protect.jpg?ver=2" alt="" />
                         </a>
